--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,16 @@
         </activity>
         <activity android:name=".TasksListActivity">
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
-        <activity android:name=".TestActivity"/>
-        <activity android:name=".ThemeActivity"/>
-        <activity android:name=".TrenActivity"/>
-        <activity android:name=".ResultsActivity"/>
-        <activity android:name=".VocabularyActivity"/>
-        <activity android:name=".MemoActivity"></activity>
+        <activity android:name=".TestActivity" />
+        <activity android:name=".ThemeActivity" />
+        <activity android:name=".TrenActivity" />
+        <activity android:name=".ResultsActivity" />
+        <activity android:name=".VocabularyActivity" />
+        <activity android:name=".MemoActivity" />
+        <activity android:name=".MultiTasksListActivity"></activity>
     </application>
 
 </manifest>
