--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,16 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".Fill2Activity"></activity>
+        <activity android:name=".FillActivity" />
+        <activity android:name=".IntActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".TasksListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
