--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@drawable/main"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FillWordActivity"></activity>
+        <activity android:name=".FillWordListActivity"></activity>
+        <activity android:name=".FillWordActivity" />
         <activity android:name=".MakeWordActivity" />
         <activity android:name=".IntActivity" />
         <activity android:name=".MainActivity" />
