--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,8 @@
         android:roundIcon="@drawable/main"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FillWordListActivity"></activity>
+        <activity android:name=".HistActivity"></activity>
+        <activity android:name=".FillWordListActivity" />
         <activity android:name=".FillWordActivity" />
         <activity android:name=".MakeWordActivity" />
         <activity android:name=".IntActivity" />
